@@ -1,5 +1,6 @@
 package collection;
 
+import java.util.Arrays;
 import java.util.List;
 
 public class ConvertList2Array {
@@ -25,7 +26,7 @@ public class ConvertList2Array {
     }
 
     public static void main(String[] args) {
-        List<Integer> list = List.of(1, 2, 3, 4, 5, 6, 7);
+        List<Integer> list = Arrays.asList(1, 2, 3, 4, 5, 6, 7);
         int[][] rsl = toArray(list, 3);
         for (int[] row : rsl) {
             for (int cell : row) {
